# 2DEngine

./: CMakeLists.txt
src/: main.cpp
src/Renderer/: basicShader.cpp  basicShader.h
src/Resources/: Manager.cpp  Manager.h
